Fixed navbar z-index

--- a/stylesheets/NavBar.scss
+++ b/stylesheets/NavBar.scss
@@ -19,9 +19,11 @@ html:not([data-scroll='0']) .App-header{
     right: 0;
     left: 0;
     position: fixed;
+    z-index: 2;
 }
 
 nav{
+    
     padding-top: 0.1rem;
 
     ul{
